Commit dia 20 de Outubro

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,8 +40,9 @@
      <!-- <div class="row">-->
         <!--<div class="col-xl-9 mx-auto">-->
         <h1>Login</h1>
-          <form method="POST" action="/cadastrarFuncionario">
+          <form method="POST" action="/entrar">
             <label>E-mail:<input type="email" class="form-control" placeholder="digite o seu e-mail" /></label>
+            <label><input type="hidden" class="form-control" placeholder="digite o seu e-mail" /></label>
             <br>
             <br>
             <label>Senha:<input type="password" class="form-control" placeholder="digite a sua senha"></label>
