--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,7 +42,6 @@
         <h1>Login</h1>
           <form method="POST" action="/entrar">
             <label>E-mail:<input type="email" class="form-control" placeholder="digite o seu e-mail" /></label>
-            <label><input type="hidden" class="form-control" placeholder="digite o seu e-mail" /></label>
             <br>
             <br>
             <label>Senha:<input type="password" class="form-control" placeholder="digite a sua senha"></label>
@@ -52,8 +51,7 @@
 
           </form>
         <br>
-        <h6>Ainda não possui cadastro?</h6>
-        <a href="/cadastrarFuncionario">Clique aqui para cadastrar-se.</a>
+        <a href="/cadastrarFuncionario">Ainda não possui cadastro?</a>
         <!--</div>-->
       </div>
     <!--</div>-->
