--- a/src/main/resources/templates/gerenciarTrajes.html
+++ b/src/main/resources/templates/gerenciarTrajes.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+      xmlns:th="http://thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head>
 
@@ -30,7 +32,7 @@
     <div class="container" style="display:flex;justify-content:center;align-items:center;">
         <a class="navbar-brand" href="/index"><b>To Dress</b></a>
         <span class="navbar-text">Sistema de Gerenciamento de Aluguel de Trajes</span>
-        <a class="btn btn-dark" href="/" role="button">Sair</a>
+        <a class="btn btn-dark" href="/index" role="button">Sair</a>
     </div>
 </nav>
 
