--- a/src/main/resources/templates/cadastrarCli.html
+++ b/src/main/resources/templates/cadastrarCli.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+      xmlns:th="http://thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head>
 
@@ -52,7 +54,7 @@
         <!-- <div class="row">-->
         <!--<div class="col-xl-9 mx-auto">-->
         <h1>Cadastro de Cliente</h1>
-        <form method="POST" action="/salvarCli">
+        <form method="POST" action="/salvarCliente">
             <label for="nomeCli">Nome:<input type="text" name="nomeCli" id="nomeCli" class="form-control" placeholder="digite o seu nome" ></label>
 
             <label for="nascimentoCli">Data de Nascimento:<input type="date" name="nascimentoCli" id="nascimentoCli" class="form-control" ></label>
