--- a/src/main/resources/templates/gerenciarCli.html
+++ b/src/main/resources/templates/gerenciarCli.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head>
 
@@ -42,7 +45,16 @@
         <i class="fas fa-address-book fa-3x"></i><a href="/gerenciarCli"> Gerenciar Cliente.</a>
         <br>
         <br>
-        <i class="fas fa-user-tie fa-3x"></i><a href="/gerenciarTrajes">Gerenciar Trajes.</a>
+        <i class="fas fa-tshirt fa-3x"></i><a href="/gerenciarTrajes">Gerenciar Trajes.</a>
+        <br>
+        <br>
+        <i class="fas fa-link fa-3x"></i><a href="/gerenciarTrajes">Gerenciar Aluguel.</a>
+        <br>
+        <br>
+        <i class="fas fa-link fa-3x"></i><a href="/gerenciarTrajes">Atualizar Data de Entrega.</a>
+        <br>
+        <br>
+        <i class="fas fa-link fa-3x"></i><a href="/gerenciarTrajes">Atualizar Data de Retirada.</a>
         <!-- <div class="row">-->
         <!--<div class="col-xl-9 mx-auto">-->
         <!--</div>-->
@@ -59,26 +71,28 @@
 
     </div>
 
-    <div class="container principal">
-        <table class="table ">
-            <thead>
-            <tr>
-                <th scope="col">Número</th>
-                <th scope="col">Nome</th>
-                <th scope="col">Ação</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <th scope="row"></th>
-                <td></td>
-                <!--
-                ALTERAR ESSE LINK PARA BOTÃO QUANDO A TABELA ESTIVER PRONTA
+    <div class="card posicao" style="width: 50%;">
+        <div class="card-body">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">Número</th>
+                    <th scope="col">Nome</th>
+                    <th scope="col">Ação</th>
+                </tr>
+                </thead>
+                <tbody>
+                <!--Para cada cliente apararece o código e nome dele
                 -->
-                <td><a class="btn btn-primary ml-5" href="/editarCli" role="button">Editar</a></td>
-            </tr>
-            </tbody>
-        </table>
+                <tr th:each="cliente : ${clientes}">
+                    <th scope="row" th:text="${cliente.idCli}"></th>
+                    <td th:text="${cliente.nomeCli}"></td>
+                    <td><a class="btn btn-primary ml-5" th:href="${#mvc.url('CC#buscarCli').arg(0, cliente.idCli).build()}" role="button">Editar</a>
+<!--                    <a class="btn btn-primary ml-5" th:href="${#mvc.url('CC#excluirCli').arg(0,cliente.idCli).build()}" role="button">Excluir</a></td>-->
+                </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
     <!--</div>-->
 </header>
