Commit dia 6 de novembro

--- a/src/main/resources/templates/cadastroFuncionario.html
+++ b/src/main/resources/templates/cadastroFuncionario.html
@@ -65,6 +65,7 @@
             <label>Senha:<input type="password" name="senhaFunc" id="senhaFunc" class="form-control" placeholder="digite a senha" ></label>
             <br>
             <button type="submit" class="btn btn-primary">Cadastrar</button>
+            <a class="btn btn-danger ml-5" href="/" role="button">Cancelar</a>
 
         </form>
         <!--</div>-->
