--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,22 +37,24 @@
   <!-- Masthead -->
   <header class="masthead text-dark text-center">
    <!-- <div class="overlay "></div>--> 
-    <div class="container box">
+    <div class="container login">
      <!-- <div class="row">-->
         <!--<div class="col-xl-9 mx-auto">-->
         <h1>Login</h1>
-          <form method="POST" action="/entrar">
+      <!--      </div>-->
+          <form>
             <label>E-mail:<input type="email" class="form-control" placeholder="digite o seu e-mail" /></label>
             <br>
             <br>
             <label>Senha:<input type="password" class="form-control" placeholder="digite a sua senha"></label>
             <br>
-            <button type="submit" class="btn btn-primary">Entrar</button>
+            <a class="btn btn-primary" href="/dashboard" role="button">Entrar</a>
             <br>
 
           </form>
         <br>
         <a href="/cadastrarFuncionario">Ainda não possui cadastro?</a>
+
         <!--</div>-->
       </div>
     <!--</div>-->
