--- a/src/main/resources/static/css/landing-page.css
+++ b/src/main/resources/static/css/landing-page.css
@@ -124,7 +124,18 @@ label{
   position: relative;
   margin-left: 10%;
 }
+.login{
+  position: relative;
+  width: 50%;
+  padding: 10%;
+  padding-top:1%;
+  padding-bottom: 1%;
+  padding-right: 2%;
+  padding-left: 2%;
+  background-color:#9AA6B4;
+  border-radius: 30px;
 
+}
 .box{
   position: absolute;
   height: 190%;
@@ -187,7 +198,7 @@ label{
   position: absolute;
   left:auto;
   padding: 10%;
-  height: 100%;
+  height: 135%;
   width: 30%;
   padding-top:1%;
   padding-bottom: 1%;
