--- a/src/main/resources/templates/cadastrarTrajes.html
+++ b/src/main/resources/templates/cadastrarTrajes.html
@@ -44,7 +44,16 @@
         <i class="fas fa-address-book fa-3x"></i><a href="/gerenciarCli"> Gerenciar Cliente.</a>
         <br>
         <br>
-        <i class="fas fa-user-tie fa-3x"></i><a href="/gerenciarTrajes">Gerenciar Trajes.</a>
+        <i class="fas fa-tshirt fa-3x"></i><a href="/gerenciarTrajes">Gerenciar Trajes.</a>
+        <br>
+        <br>
+        <i class="fas fa-link fa-3x"></i><a href="/gerenciarAluguel">Gerenciar Aluguel.</a>
+        <br>
+        <br>
+        <i class="fas fa-calendar-alt fa-3x"></i><a href="/gerenciarTrajes">Atualizar Data de Entrega.</a>
+        <br>
+        <br>
+        <i class="fas fa-calendar-alt fa-3x"></i><a href="/gerenciarTrajes">Atualizar Data de Retirada.</a>
         <!-- <div class="row">-->
         <!--<div class="col-xl-9 mx-auto">-->
         <!--</div>-->
@@ -61,7 +70,7 @@
             <label for="cor">Cor:<input type="text" name="cor" id="cor" class="form-control" placeholder="digite a cor" ></label>
             <br>
             <button type="submit" class="btn btn-primary">Cadastrar</button>
-            <a class="btn btn-primary ml-5" href="/gerenciarTrajes" role="button">Cancelar</a>
+            <a class="btn btn-danger ml-5" href="/gerenciarTrajes" role="button">Cancelar</a>
         </form>
         <!--</div>-->
     </div>
