--- a/src/main/resources/templates/gerenciarCli.html
+++ b/src/main/resources/templates/gerenciarCli.html
@@ -48,13 +48,13 @@
         <i class="fas fa-tshirt fa-3x"></i><a href="/gerenciarTrajes">Gerenciar Trajes.</a>
         <br>
         <br>
-        <i class="fas fa-link fa-3x"></i><a href="/gerenciarTrajes">Gerenciar Aluguel.</a>
+        <i class="fas fa-link fa-3x"></i><a href="/gerenciarAluguel">Gerenciar Aluguel.</a>
         <br>
         <br>
-        <i class="fas fa-link fa-3x"></i><a href="/gerenciarTrajes">Atualizar Data de Entrega.</a>
+        <i class="fas fa-calendar-alt fa-3x"></i><a href="/gerenciarTrajes">Atualizar Data de Entrega.</a>
         <br>
         <br>
-        <i class="fas fa-link fa-3x"></i><a href="/gerenciarTrajes">Atualizar Data de Retirada.</a>
+        <i class="fas fa-calendar-alt fa-3x"></i><a href="/gerenciarTrajes">Atualizar Data de Retirada.</a>
         <!-- <div class="row">-->
         <!--<div class="col-xl-9 mx-auto">-->
         <!--</div>-->
@@ -88,7 +88,7 @@
                     <th scope="row" th:text="${cliente.idCli}"></th>
                     <td th:text="${cliente.nomeCli}"></td>
                     <td><a class="btn btn-primary ml-5" th:href="${#mvc.url('CC#buscarCli').arg(0, cliente.idCli).build()}" role="button">Editar</a>
-<!--                    <a class="btn btn-primary ml-5" th:href="${#mvc.url('CC#excluirCli').arg(0,cliente.idCli).build()}" role="button">Excluir</a></td>-->
+                    <a class="btn btn-primary ml-5" th:href="${#mvc.url('CC#excluirCli').arg(0,cliente.idCli).build()}" role="button">Excluir</a></td>
                 </tr>
                 </tbody>
             </table>
