--- a/src/main/resources/templates/gerenciarAluguel.html
+++ b/src/main/resources/templates/gerenciarAluguel.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
+<html lang="en"
+      xmlns:th="http://thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head>
@@ -60,40 +59,27 @@
         <!--</div>-->
     </div>
 
-    <div class="container pesquisa col-auto " >
-
-        <form action=" " method="post" >
-
-            <label for="busca">Buscar</label>
-            <input type="search" id="busca" name="q">
-            <button type="submit"><i class="fas fa-search fa-1x"></i></button>
-            <a class="btn btn-primary ml-5" href="/cadastrarCli" role="button">Cadastrar</a>
+    <div class="container box">
+        <!-- <div class="row">-->
+        <!--<div class="col-xl-9 mx-auto">-->
+        <h1>Cadastro de Aluguel</h1>
+        <form method="POST" action="/">
+            <label for="codRoupaUtensilios">Nome do Locatário:<input type="text" name="codRoupaUtensilios" id="codRoupaUtensilios" class="form-control" placeholder="digite o nome"></label>
+            <label for="codRoupaUtensilios">Código do traje:<input type="text" name="codRoupaUtensilios" id="codRoupaUtensilios" class="form-control" placeholder="digite o código"></label>
+            <br>
+            <label for="tamanho">Tamanho:<input type="text" name="tamanho" id="tamanho" class="form-control" placeholder="digite o tamanho" ></label>
+            <label for="cor">Cor:<input type="text" name="cor" id="cor" class="form-control" placeholder="digite a cor" ></label>
+            <br>
+            <label for="cor">Data do Evento:<input type="date" name="cor" id="cor" class="form-control" placeholder="digite a cor" ></label>
+            <label for="cor">Data de Prova:<input type="date" name="cor" id="cor" class="form-control" placeholder="digite a cor" ></label>
+            <br>
+            <label for="cor">Data da Retirada:<input type="date" name="cor" id="cor" class="form-control" placeholder="digite a cor" ></label>
+            <label for="cor">Data de Entrega:<input type="date" name="cor" id="cor" class="form-control" placeholder="digite a cor" ></label>
+            <br>
+            <button type="submit" class="btn btn-primary">Cadastrar</button>
+            <a class="btn btn-danger ml-5" href="/dashboard" role="button">Cancelar</a>
         </form>
-
-    </div>
-
-    <div class="card posicao" style="width: 50%;">
-        <div class="card-body">
-            <table class="table">
-                <thead>
-                <tr>
-                    <th scope="col">Número</th>
-                    <th scope="col">Nome</th>
-                    <th scope="col">Ação</th>
-                </tr>
-                </thead>
-                <tbody>
-                <!--Para cada cliente apararece o código e nome dele
-                -->
-                <tr th:each="cliente : ${clientes}">
-                    <th scope="row" th:text="${cliente.idCli}"></th>
-                    <td th:text="${cliente.nomeCli}"></td>
-                    <td><a class="btn btn-primary ml-5" th:href="${#mvc.url('CC#buscarCli').arg(0, cliente.idCli).build()}" role="button">Editar</a>
-                    <a class="btn btn-primary ml-5" th:href="${#mvc.url('CC#excluirCli').arg(0,cliente.idCli).build()}" role="button">Excluir</a></td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
+        <!--</div>-->
     </div>
     <!--</div>-->
 </header>
@@ -103,6 +89,11 @@
 <script src="vendor/jquery/jquery.min.js"></script>
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="vendor/jquery/mascaras.js"></script>
+<script src="vendor/jquery/jquery.maskedinputs.js"></script>
 </body>
 
 </html>
